# nanomem

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  pyproject.toml  readme.md
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: agent-memory-positioning.md  architecture-overview.md  index-backends.md  nanomem-code-architecture.md  nanomem-product-rfc.md  system-design.md
docs/admin/: 00-control-plane-boundary.md  01-information-architecture.md  02-local-mvp.md  03-admin-api.md  04-ui-workflows.md  05-operations-and-privacy.md  06-optimization-roadmap.md  07-behavior-cases.md  README.md
docs/manager/: 00-control-plane-boundary.md  01-information-architecture.md  02-local-mvp.md  03-control-api.md  04-ui-workflows.md  05-operations-and-privacy.md  06-optimization-roadmap.md  07-behavior-cases.md  08-react-frontend-architecture.md  09-design-system.md  README.md
docs/nanomem/: 00-overview.md  01-product-boundary.md  02-memory-model.md  03-capture-api.md  04-read-api.md  05-extraction.md  06-retrieval-ranking-render.md  07-storage.md  08-index-backends.md  09-configuration.md  10-interfaces-and-integration.md  11-behavior-cases.md  12-operations-privacy.md  13-roadmap.md  14-contract-freeze-review.md  15-web-management-console.md  (+1 more)
manager-ui/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_complete_test_db.py  smoke_codex_plugin.sh  smoke_codex_project_hooks.sh  smoke_codex_sidecar.sh  smoke_lancedb_index.sh
tests/: test_errors.py  test_layering.py  test_protocols.py  test_serde.py
tools/: check_layering.py
(+258 files in other folders)
