[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanomem"
version = "0.3.0a1"
description = "Long-term personal memory storage and retrieval for agent harnesses."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "NanoMem contributors" },
]
keywords = ["memory", "agents", "retrieval", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
lancedb = ["lancedb"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Linzwcs/nanomem"
Repository = "https://github.com/Linzwcs/nanomem"

[project.scripts]
nanomem = "nanomem.ops.cli.main:main"
nanomem-server = "nanomem.transports.http.main:main"
nanomem-mcp = "nanomem.transports.mcp.main:main"
nanomem-agent-hook = "nanomem.hosts.plugins.hooks:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nanomem.ops.manager_assets.assets" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
